# pydcmview

./: .gitignore  AUTOMATION.md  CLAUDE.md  Makefile  PUBLISHING.md  README.md  TERMINAL_COMPATIBILITY_FIX.md  TERMINAL_FIX_FINDINGS.md  TESTING_INSTRUCTIONS.md  check_demo_protocol.py  create_test_nrrd.py  debug_terminal_protocols.py  pyproject.toml  requirements.txt  test_actual_viewer.py  test_capture_render.py  test_colorterm_detection.py  test_halfcell_capture.py  test_halfcell_rendering.py  test_minimal_sixel.py  test_protocol_selection.py  test_scroll.py  test_sixel_update.py  test_terminal_graphics.py  test_volume.nrrd  verify_widget_selection.py
scripts/: README.md  bump_version.py  publish.sh
src/pydcmview/: __init__.py  colormap.py  image_loader.py  viewer.py
src/pydcmview.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test.nrrd
