[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pydcmview"
version = "0.1.0"
description = "Terminal-based medical image viewer for DICOM, NRRD, and Nifti formats"
authors = [{name = "PyDCMView Contributors"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "textual>=0.70.0",
    "rich-pixels>=2.1.0",
    "SimpleITK>=2.3.0",
    "numpy>=1.21.0",
    "pydicom>=2.3.0",
    "Pillow>=8.0.0",
]

[project.scripts]
pydcmview = "pydcmview.main:main"

[project.urls]
Homepage = "https://github.com/yourusername/pydcmview"
Repository = "https://github.com/yourusername/pydcmview"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"